hphp/hack/test/extended_reasons/intersection_subtyping_l.php
<?hh

interface I {}
class A {}
class C extends A {}

function inter_l((A & I) $ai): C {
  $c = $ai;
  return $c;
}
